diff_sniffer: Removed linebreak-style rule in order to avoid issued caused by git

--- a/custom_rules/.eslintrc.json
+++ b/custom_rules/.eslintrc.json
@@ -27,6 +27,7 @@
             "functions": "ignore"
         }],
         "object-shorthand": "off",
-        "no-plusplus": "off"
+        "no-plusplus": "off",
+        "linebreak-style": "off"
     }
 }
