--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "debug": "^3.0.1",
     "doctrine": "^2.0.0",
     "eslint": "^4.10.0",
+    "eslint-plugin-max-len-2": "0.0.5",
     "eslint-scope": "^3.7.1",
     "espree": "^3.5.1",
     "esquery": "^1.0.0",
